--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
 </head>
 <body>
     <div class="container">
-        <div class="nav-bar">
+        <header class="nav-bar">
             <div class="logo">
-                <img src="/images/Logo_Final-03.jpg" alt="ThinkBig Logo">
+                <a href="index.html">
+                    <img src="/images/Logo_Final-03.jpg" alt="ThinkBig Logo">
+                </a>
             </div>
             <div class="nav-bar-links">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
+                <ul class="nav-bar-ul">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Meet Our Team</a></li>
                     <li><a href="#">Carrers</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>  
-        </div>
+        </header>
 
         <div class="home-container">
             <div class="home-text">
                 <h1>BUILD A WINNING BUSINESS PARTNERSHIP.</h1>
                 <h2>Transform Transactions into relationships</h2>
+                <br>
                 <button class="start-now-btn">Start now</button>
             </div>
             <div class="home-image">
@@ -60,7 +63,7 @@
             <div class="header-container">
                 <h2 class="header-text">Our Services</h2>
             </div>
-            <div class="services-grid">
+            <div class="services-grid element-animation">
                 <div class="card">
                     <img src="/images/service1.png" alt="Application Maintenance & Support">
                     <h3>Application Maintenance & Support</h3>
@@ -73,46 +76,50 @@
                 <div class="card">
                     <img src="/images/service2.png" alt="SAP & ERP">
                     <h3>SAP & ERP</h3>
-                    <p>ThinkBiG offers Application Maintenance services on a global delivery model, 
-                        such as SLA driven application, producation support and maintenance as a 
-                        managed service, Application Portfolio Rationalization (APR), 
-                        Software License Management (SLM) and Application Life Cycle Management (ALCM)</p>
+                    <p>Thinkbig software Solutions offers an expanded focus on ERP 
+                       implementations by tracking additional metrics such as disruptions
+                       in business operations and impact on productivity and level of ERP
+                       adoption across your enterprise. ERP systems impact almost every 
+                       aspect of a company; therefore, the success of an ERP implementation
+                       is of critical importance.</p>
                     <button>read more</button>
                 </div>
                 <div class="card">
                     <img src="/images/service3.png" alt="E-Com Website Development">
                     <h3>E-Com Website Development</h3>
-                    <p>ThinkBiG offers Application Maintenance services on a global delivery model, 
-                        such as SLA driven application, producation support and maintenance as a 
-                        managed service, Application Portfolio Rationalization (APR), 
-                        Software License Management (SLM) and Application Life Cycle Management (ALCM)</p>
+                    <p>A robust e-Commerce website serves as the foundation of online retail business.
+                         Out of the Box understands the importance of utilizing the latest technology 
+                         to maximize profitability.</p>
                     <button>read more</button>
                 </div>
                 <div class="card">
                     <img src="/images/service4.png" alt="Data Analytics and Visualization">
                     <h3>Data Analytics and Visualization</h3>
-                    <p>ThinkBiG offers Application Maintenance services on a global delivery model, 
-                        such as SLA driven application, producation support and maintenance as a 
-                        managed service, Application Portfolio Rationalization (APR), 
-                        Software License Management (SLM) and Application Life Cycle Management (ALCM)</p>
+                    <p>Data and visual analytics is an emerging field concerned with analyzing,
+                       modeling, and visualizing complex high dimensional data. This opportunity
+                       will introduce world to the field by covering state-of-the-art modeling.
+                    </p>
                     <button>read more</button>
                 </div>
                 <div class="card">
                     <img src="/images/service5.png" alt="Mobile Application Development">
                     <h3>Mobile Application Development</h3>
-                    <p>ThinkBiG offers Application Maintenance services on a global delivery model, 
-                        such as SLA driven application, producation support and maintenance as a 
-                        managed service, Application Portfolio Rationalization (APR), 
-                        Software License Management (SLM) and Application Life Cycle Management (ALCM)</p>
+                    <p>ThinkBiG offers advanced services in the field of mobile
+                       application development across various platforms. 
+                       We are constantly engaged in raising the bar and 
+                       setting higher standards for mobile applications by 
+                       using the three key characteristics, i.e. anytime access,
+                       personalized and contextual use.</p>
                     <button>read more</button>
                 </div>
                 <div class="card">
                     <img src="/images/service6.png" alt="Data Science">
+                    <br>
+                    <br>
                     <h3>Data Science</h3>
-                    <p>ThinkBiG offers Application Maintenance services on a global delivery model, 
-                        such as SLA driven application, producation support and maintenance as a 
-                        managed service, Application Portfolio Rationalization (APR), 
-                        Software License Management (SLM) and Application Life Cycle Management (ALCM)</p>
+                    <p>Data science is a multi-disciplinary field that uses 
+                       scientific methods, processes, algorithms and systems 
+                       to extract knowledge and insights from structured and unstructured data.<p>
                     <button>read more</button>
                 </div>
             </div>
@@ -122,7 +129,7 @@
             <div class="header-container">
                 <h2 class="header-text">Our Premium Clients</h2>
             </div>   
-            <div class="slider-grid">
+            <div class="slider-grid ">
                 <div>
                     <img class="client-img" src="/images/client1.png" alt="">
                 </div>
@@ -139,7 +146,7 @@
             <div class="header-container">
                 <h2 class="header-text">Engagement Models</h2>
             </div>
-            <div class="model-grid">
+            <div class="model-grid element-animation">
                 <div class="model-box">
                     <img src="/images/Artboard-1-1-1024x724.png" alt="Partnership">
                     <h3>Partnership</h3>
@@ -152,19 +159,16 @@
                 <div class="model-box">
                     <img src="/images/Artboard-6-1024x724.png" alt="Time & Materials">
                     <h3>Time & Materials</h3>
-                    <p>An ideal partnership empowers its partners equally. 
-                       As we deliver technical solution on time to meet your expectations,
-                       allowing you to focus on the important time and the bound management task,
-                       we work under your brand name as an extension of your company .</p>
+                    <p>Through the Time & Material Business Model, at ThinkBiG
+                       we offer you the flexibility to alter specifications with 
+                       revisions in requirements based on your business needs.</p>
                 </div>
     
                 <div class="model-box">
                     <img src="/images/dada.png" alt="Fixed Price">
                     <h3>Fixed Price</h3>
-                    <p>An ideal partnership empowers its partners equally. 
-                       As we deliver technical solution on time to meet your expectations,
-                       allowing you to focus on the important time and the bound management task,
-                       we work under your brand name as an extension of your company .</p>
+                    <p>At ThinkBiG we follow a Fixed Price Business Model for
+                       projects that are specifically defined in terms of their requirements, schedules and project path.</p>
                 </div>
     
                 <div class="model-box">
@@ -258,6 +262,38 @@
             </div>
             <button>Let's Discuss</button>
         </div>
+        <footer>
+            <div class="nav-bar-links footer-nav-bar-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Meet Our Team</a></li>
+                    <li><a href="#">Carrers</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div> 
+            <div class="footer-contact">
+                <h2>India</h2>
+                <p>ThinkBIG Software  Solutions Pvt Ltd.,</p>
+                <p>
+                    Temple Tower, 672/476,
+                    8th Floor, Anna Salai,
+                    Nandhanam, Chennai - 600 035
+                </p>
+                <br>
+                <div class="contact-links">
+                    <a href="tel:+919940014627">+91 99400 14627 </a>
+                    <a href="tel:+9104448564018">044-48564018 </a>
+                    <br>
+                    <br>
+                    <a href="mailto:admin@thinkbigsoft.com">admin@thinkbigsoft.com</a>
+                </div>
+            </div>
+            <div>
+
+            </div>    
+        </footer>
     </div>
 </body>
 </html>
