created Services page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <title>ThinkBIG</title>
 </head>
 <body>
     <div class="container">
@@ -17,7 +18,7 @@
                 <ul class="nav-bar-ul">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="#">Meet Our Team</a></li>
                     <li><a href="#">Carrers</a></li>
                     <li><a href="#">Contact Us</a></li>
