--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="/styles/about.css">
     <title>About Us</title>
 </head>
 
@@ -19,8 +19,8 @@
             <div class="nav-bar-links">
                 <ul class="nav-bar-ul">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="#">Meet Our Team</a></li>
                     <li><a href="#">Carrers</a></li>
                     <li><a href="#">Contact Us</a></li>
