--- a/ourTeam.html
+++ b/ourTeam.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header class="nav-bar">
-            <div class="logo">
+            <div class="logo">g
                 <a href="index.html">
                     <img src="/images/Logo_Final-03.jpg" alt="ThinkBig Logo">
                 </a>
@@ -22,8 +22,8 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="ourTeam.html">Meet Our Team</a></li>
-                    <li><a href="#">Carrers</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="careers.html">Carrers</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </header>
@@ -170,12 +170,12 @@
         <footer>
             <div class="nav-bar-links footer-nav-bar-links">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Meet Our Team</a></li>
-                    <li><a href="#">Carrers</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="ourTeam.html">Meet Our Team</a></li>
+                    <li><a href="careers.html">Carrers</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
