--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="ourTeam.html">Meet Our Team</a></li>
-                    <li><a href="#">Carrers</a></li>
+                    <li><a href="careers.html">Carrers</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
@@ -266,15 +266,14 @@
             </div>
         </section>
 
-
         <footer>
             <div class="nav-bar-links footer-nav-bar-links">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Meet Our Team</a></li>
-                    <li><a href="#">Carrers</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="ourTeam.html">Meet Our Team</a></li>
+                    <li><a href="careers.html">Carrers</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
