reuse.css and store form data in array

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/reuse.css">
     <link rel="stylesheet" href="/styles/style.css">
+    <script defer src="/scripts/home.js"></script>
     <title>ThinkBIG</title>
 </head>
 
@@ -33,7 +35,11 @@
                 <h1>BUILD A WINNING BUSINESS PARTNERSHIP.</h1>
                 <h2>Transform Transactions into relationships</h2>
                 <br>
-                <button class="start-now-btn">Start now</button>
+                <a href="contact.html">
+                    <button class="start-now-btn" class="buttton-contact">
+                        Start now
+                    </button>
+                </a>
             </div>
             <div class="home-image">
                 <img src="/images/rest.jpg" alt="home rest">
@@ -58,7 +64,11 @@
                 </p>
             </div>
             <div>
-                <button>get to know us</button>
+                <a href="about.html">
+                    <button class="button-info">
+                        get to know us
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -74,7 +84,11 @@
                         such as SLA driven application, producation support and maintenance as a
                         managed service, Application Portfolio Rationalization (APR),
                         Software License Management (SLM) and Application Life Cycle Management (ALCM)</p>
-                    <button>read more</button>
+                        <a href="services.html">
+                            <button class="button-service-info">
+                                read more
+                            </button>
+                        </a>
                 </div>
                 <div class="card">
                     <img src="/images/service2.png" alt="SAP & ERP">
@@ -85,7 +99,11 @@
                         adoption across your enterprise. ERP systems impact almost every
                         aspect of a company; therefore, the success of an ERP implementation
                         is of critical importance.</p>
-                    <button>read more</button>
+                        <a href="services.html">
+                            <button class="button-service-info">
+                                read more
+                            </button>
+                        </a>
                 </div>
                 <div class="card">
                     <img src="/images/service3.png" alt="E-Com Website Development">
@@ -93,7 +111,11 @@
                     <p>A robust e-Commerce website serves as the foundation of online retail business.
                         Out of the Box understands the importance of utilizing the latest technology
                         to maximize profitability.</p>
-                    <button>read more</button>
+                        <a href="services.html">
+                            <button class="button-service-info">
+                                read more
+                            </button>
+                        </a>
                 </div>
                 <div class="card">
                     <img src="/images/service4.png" alt="Data Analytics and Visualization">
@@ -102,7 +124,11 @@
                         modeling, and visualizing complex high dimensional data. This opportunity
                         will introduce world to the field by covering state-of-the-art modeling.
                     </p>
-                    <button>read more</button>
+                    <a href="services.html">
+                        <button class="button-service-info">
+                            read more
+                        </button>
+                    </a>
                 </div>
                 <div class="card">
                     <img src="/images/service5.png" alt="Mobile Application Development">
@@ -113,7 +139,11 @@
                         setting higher standards for mobile applications by
                         using the three key characteristics, i.e. anytime access,
                         personalized and contextual use.</p>
-                    <button>read more</button>
+                        <a href="services.html">
+                            <button class="button-service-info">
+                                read more
+                            </button>
+                        </a>
                 </div>
                 <div class="card">
                     <img src="/images/service6.png" alt="Data Science">
@@ -124,7 +154,11 @@
                         scientific methods, processes, algorithms and systems
                         to extract knowledge and insights from structured and unstructured data.
                     <p>
-                        <button>read more</button>
+                        <a href="services.html">
+                            <button class="button-service-info">
+                                read more
+                            </button>
+                        </a>
                 </div>
             </div>
         </div>
@@ -134,15 +168,17 @@
                 <h2 class="header-text">Our Premium Clients</h2>
             </div>
             <div class="slider-grid ">
-                <div>
+                <div class="slides fade">
                     <img class="client-img" src="/images/client1.png" alt="">
                 </div>
-                <div>
+                <div class="slides fade">
                     <img class="client-img" src="/images/client2.png" alt="">
                 </div>
-                <div>
+                <div class="slides fade">
                     <img class="client-img" src="/images/client3.png" alt="">
                 </div>
+                <!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
             </div>
         </div>
 
@@ -265,7 +301,11 @@
                 <h2>We would love to talk about your project.</h2>
                 <h3>We will help you to achieve your goals and to grow your business.</h3>
             </div>
-            <button>Let's Discuss</button>
+            <a href="contact.html">
+                <button class="buttton-contact">
+                    Let's Discuss
+                </button>
+            </a>
         </div>
         <footer>
             <div class="nav-bar-links footer-nav-bar-links">
