--- a/ourTeam.html
+++ b/ourTeam.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/reuse.css">
     <link rel="stylesheet" href="/styles/ourTeam.css">
     <title>Our Team</title>
 </head>
@@ -11,7 +12,7 @@
 <body>
     <div class="container">
         <header class="nav-bar">
-            <div class="logo">g
+            <div class="logo">
                 <a href="index.html">
                     <img src="/images/Logo_Final-03.jpg" alt="ThinkBig Logo">
                 </a>
