--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/reuse.css">
     <link rel="stylesheet" href="styles/services.css">
     <title>Services</title>
 </head>
@@ -23,7 +24,7 @@
                     <li><a href="services.html">Services</a></li>
                     <li><a href="ourTeam.html">Meet Our Team</a></li>
                     <li><a href="careers.html">Carrers</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </header>
@@ -53,7 +54,11 @@
                 <img src="/images/service2.png" alt="SAP">
             </div>
             <div class="section-button-box">
-                <button>Get your business online</button>
+                <a href="contact.html">
+                    <button class="button-contact">
+                        Get your business online
+                    </button>
+                </a>
             </div>
         </section>
 
@@ -118,7 +123,11 @@
             </div>
 
             <div class="app-service-button">
-                <button>Get your business online</button>
+                <a href="contact.html">
+                    <button class="button-contact">
+                        Get your business online
+                    </button>
+                </a>
             </div>
         </section>
 
@@ -175,7 +184,11 @@
             </div>
 
             <div class="app-service-button">
-                <button>Get your business online</button>
+                <a href="contact.html">
+                    <button class="button-contact">
+                        Get your business online
+                    </button>
+                </a>
             </div>
         </section>
 
@@ -207,7 +220,11 @@
             </div>
 
             <div class="app-service-button">
-                <button>Get your business online</button>
+                <a href="contact.html">
+                    <button class="button-contact">
+                        Get your business online
+                    </button>
+                </a>        
             </div>
 
             <div class="service-container">
@@ -262,7 +279,11 @@
             </div>
 
             <div class="app-service-button">
-                <button>Get your business online</button>
+                <a href="contact.html">
+                    <button class="button-contact">
+                        Get your business online
+                    </button>
+                </a>
             </div>
         </section>
 
@@ -274,7 +295,7 @@
                     <li><a href="services.html">Services</a></li>
                     <li><a href="ourTeam.html">Meet Our Team</a></li>
                     <li><a href="careers.html">Carrers</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
